--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -24,6 +24,145 @@ needs please refer to https://devdocs.prestashop.com/ for more information.
 Changelog for PrestaShop 8
 
 ####################################
+#   v8.0.2 - (2023-03-01)
+####################################
+
+- Back Office:
+  - Bug fix:
+    - #30957: Redirect to product list with warning message instead of raising an exception when we try to access a product which doesn't exist (by @lartist)
+    - #31514: Fix sorting attribute do not works (by @mflasquin)
+    - #31667: Catch PrestaShopException to validate sql-requests properly in PHP 8.X (by @boherm)
+    - #31654: Fix addslashes not working (by @mflasquin)
+    - #31603: Fix generating of preload.tpl (by @kpodemski)
+    - #30962: Module from theme with tab using SF routing fails after enabling the theme (by @jolelievre)
+    - #29358: Fix price formatting in MoneyType (by @zuk3975)
+    - #29647: BO - Import files - Do not show generated csv files from import/csvfromexcel folder in history of uploaded files (by @mflasquin)
+    - #30415: Fix applying special char on translations (by @mflasquin)
+    - #29488: Module translations no longer take translations from another lang if its default one. (by @margud)
+    - #29837: Avoid possibility to create product with combinations when combinations feature is disabled (by @mflasquin)
+    - #30818: Fix access for read only permissions (by @dingedi)
+    - #30745: Load default language if employee id lang does not exist (by @mflasquin)
+- Front Office:
+  - Bug fix:
+    - #31152: Always use id_country from request if provided (by @atomiix)
+    - #31148: Change domain to fix translation issue (by @atomiix)
+    - #30992: Fix customer isLogged property in FO (by @Hlavtox)
+- Core:
+  - Improvement:
+    - #31707: Update composer.lock for modules contactform and ps_contactinfo (by @matthieu-rolland)
+    - #31574: Lock theme classic version to 2.0.8 (by @matthieu-rolland)
+    - #31575: Add missing licence  (by @matthieu-rolland)
+    - #30676: Upgraded classic theme and ps_contactinfo module (by @nicosomb)
+  - Bug fix:
+    - #31503: Filter empty values for modulesFromHooks (by @sowbiba)
+    - #31137: Disable module's hook before upgrading it (by @atomiix)
+    - #31241: Improved session availability test (by @Hlavtox)
+    - #31006: Fix conversion of hex color codes (by @lmeyer1)
+    - #30834: Fix SQL error introduced by da10f001 (by @lmeyer1)
+- Web Services:
+  - Bug fix:
+    - #31023: Backport #30309 : Fix broken result in webservices for 8.0.x (by @boubkerbribri)
+    - #30993: Fix issue #26568 about customer blank schema (by @ceer)
+- Tests:
+  - Bug fix:
+    - #29751: Fixed testsuite with sebastian/comparator release (by @nicosomb)
+  - Refactoring:
+    - #31389: Functional tests - Add scripts to run each test less than 30 minutes (by @nesrineabdmouleh)
+
+
+####################################
+#   v8.1.0 Beta 1 - (2023-01-09)
+####################################
+
+- Back Office:
+  - New feature:
+    - #31130: Unify stabilize and enable product feature flag (by @jolelievre)
+    - #31095: Handle last actions for product list multi shop (by @jolelievre)
+    - #30169: Skip admin IP check when maintenance mode is enabled  (by @unlocomqx)
+    - #30045: Added new image formats generation (by @nicosomb)
+    - #30781: Handle product list multishop row actions (by @jolelievre)
+    - #30497: APIS08 - Display list of authorized apps (by @mflasquin)
+    - #30584: Manage cover in multishop context (by @lartist)
+    - #30677: Product shop previews (by @jolelievre)
+    - #30624: Manage multi shop images association (by @jolelievre)
+    - #30337: Add “Authorization server” in the side menu of the BO (by @mflasquin)
+    - #30662: Product edit modal shop selection (by @jolelievre)
+    - #30603: Allow controlling profiler from backoffice (by @Hlavtox)
+    - #30495: Product multishop list and shared group stock (by @jolelievre)
+    - #30455: Fetching every image details for a product in every shop (by @lartist)
+    - #29927: [BC Break] Add visibility checkbox description (by @FabienPapet)
+    - #30315: Customization field multishop (by @jolelievre)
+    - #30380: BO > Shopping Carts : Force Bulk Column (by @Progi1984)
+    - #30054: Add a modal window when the user clicks on 'Regenerate thumbnails' button (by @Progi1984)
+    - #28640: [BC Break] Add movements history grouping in product page (by @jolelievre)
+    - #27712: [BC Break] Create product for shop, shop selection modal (by @jolelievre)
+    - #30106: Manage image by multi shop matrix (by @lartist)
+    - #30035: Allow legacy link feature flag (by @FabienPapet)
+    - #30132: [BC Break] Upgrade AddProductImageCommand and GetProductImageCommand to fit with multishop (by @lartist)
+    - #28820: Add employee info on the Payments tab when payment is registered (by @Progi1984)
+    - #27608: Make Shop Parameters > Customer Settings > Customers form multistore compatible (by @micka-fdz)
+  - Improvement:
+    - #29524: Disable product type button when new changes are not saved (by @margud)
+    - #31142: Add feature flags for rest of migrated pages (by @JevgenijVisockij)
+    - #31136: Handle route not found in new api (by @mflasquin)
+    - #31135: Forced jpg format for images generation (by @nicosomb)
+    - #28812: [BC Break] Tax Rules Group : Migrate Add & Edit Forms (by @Progi1984)
+    - #30863: Add delete action to module manager (by @Hlavtox)
+    - #29314: Collect unregistered hooks in debug toolbar (by @jolelievre)
+    - #31061: Fix debug bar partially covering some elements (by @JBLach)
+    - #31047: [BC Break] Add shop constraint on SetAssociatedProductCategoriesCommand and RemoveAllAssociatedProductCategoriesCommand (by @jolelievre)
+    - #31048: [BC Break] Duplicate product multishop (part 1) (by @jolelievre)
+    - #30918: Change icon of module with missing logo (by @Hlavtox)
+    - #30846: Refactor module manager (by @Hlavtox)
+    - #30853: Added cache:clear after composer commands (by @nicosomb)
+    - #30900: Adding feature flag for catalog price rules and cart rules (by @JevgenijVisockij)
+    - #30665: Allow override.css to be used in the new back office theme (by @jeckyl)
+    - #30772: Allow unselecting default category in category tree (by @zuk3975)
+    - #29421: Remove empty category blocks in module manager (by @eternoendless)
+    - #30510: Added the deletion of images linked to the image settings (by @nicosomb)
+    - #29475: Eco tax fixed for combination price (by @margud)
+    - #30467: Remove the configuration "Automatically check for module updates" (by @Progi1984)
+    - #29569: Don't get info about email exists when reset admin password (by @PululuK)
+    - #29753: Allow to configure if order should switch to backorder (by @Hlavtox)
+    - #29793: Add a button to delete logo image on Manufacturer/Supplier form (by @Progi1984)
+    - #28141: Add breadcrumbs for categories with identical names (by @zuk3975)
+    - #29377: Make new-theme npm 8 compatible (by @NeOMakinG)
+    - #29934: Center icon into sidebar (by @PrestaEdit)
+    - #29490: Notice in Back Office where you edit image settings (by @AlexTechDev)
+    - #28439: Migrate the Customers > Title (Only Delete & Bulk Delete) (by @Progi1984)
+    - #28634: Notification Dropdown : Migrate links to Symfony routes (by @Progi1984)
+    - #29173: Limit min date and max date of the movements page (by @NeOMakinG)
+    - #28872: Allow controller to set class name in select render list column (by @Amit-Kumar-Tiwari-Webkul)
+    - #27987: States : Migrate Add & Edit Forms (by @Progi1984)
+    - #28441: IP white list should not be preconfigured (by @lmeyer1)
+    - #28799: Sort product table (in email, invoices and order view) by reference id (by @Progi1984)
+    - #28736: Confirmation modal before disabling non native module (by @Progi1984)
+    - #28683: Improve datepicker design in dashboard (by @mparvazi)
+  - Bug fix:
+    - #31255: PPV2 catch ProductNotFound exception and flash error (by @zuk3975)
+    - #31250: PPV2 fix updating name for all shops while enabling status for single shop (by @zuk3975)
+    - #31247: Feature flag multistore (by @jolelievre)
+    - #30592: [BC Break] Combination delta quantity fix (by @margud)
+    - #31171: Fallback to first found combination when fetching combination by all shops constraint (by @zuk3975)
+    - #31235: Do not show combination id in history tab (by @zuk3975)
+    - #31199: Fix prestashop:linter:security-annotation find-missing failed because of non existant methods (by @mflasquin)
+    - #30985: Consider attribute_shop association when generating combinations (by @zuk3975)
+    - #30881: Load combination choices depending on shop selection in SpecificPrice form (by @zuk3975)
+    - #30996: Fix sql request when fetching all products of a shop group (by @lartist)
+    - #30473: Customer/Customer Preferences : Display an alert message for partner offers (by @Progi1984)
+    - #30808: Remove images from shop when deleting product from shop (by @zuk3975)
+    - #30959: Fix typo in getCombinationIdsAction annotation and simplify js selector (by @zuk3975)
+    - #28070: Add new order - Cart rule description is not correct (by @buggyzap)
+    - #30730: Changing wording and adding text helper for product name error input (by @lartist)
+    - #30948: Restore original module action order (by @Hlavtox)
+    - #28720: Avoid clear ranges when click on "Free shipping" (by @marsaldev)
+    - #29944: Use relative urls for Quick Access menu (by @lmeyer1)
+    - #29358: Fix price formatting in MoneyType (by @zuk3975)
+    - #29647: BO - Import files - Do not show generated csv files from import/csvfromexcel folder in history of uploaded files (by @mflasquin)
+    - #30831: Fix text-preview widget to show combination names in list (by @zuk3975)
+    - #30158: Disable access to the customer groups page when this feature is disabled (by @ks129)
+
+####################################
 #   v8.1.0 Beta 1 - (2023-01-09)
 ####################################
 
@@ -111,12 +250,10 @@ Changelog for PrestaShop 8
     - #30948: Restore original module action order (by @Hlavtox)
     - #28720: Avoid clear ranges when click on "Free shipping" (by @marsaldev)
     - #29944: Use relative urls for Quick Access menu (by @lmeyer1)
-    - #29358: Fix price formatting in MoneyType (by @zuk3975)
     - #29647: BO - Import files - Do not show generated csv files from import/csvfromexcel folder in history of uploaded files (by @mflasquin)
     - #30831: Fix text-preview widget to show combination names in list (by @zuk3975)
     - #30158: Disable access to the customer groups page when this feature is disabled (by @ks129)
     - #30415: Fix applying special char on translations (by @mflasquin)
-    - #29488: Module translations no longer take translations from another lang if its default one. (by @margud)
     - #29837: Avoid possibility to create product with combinations when combinations feature is disabled (by @mflasquin)
     - #30818: Fix access for read only permissions (by @dingedi)
     - #29381: Allow blank value for mobile phone (by @tom-combet)
@@ -621,13 +758,11 @@ Changelog for PrestaShop 8
     - #30473: Customer/Customer Preferences : Display an alert message for partner offers (by @Progi1984)
     - #30808: Remove images from shop when deleting product from shop (by @zuk3975)
     - #30959: Fix typo in getCombinationIdsAction annotation and simplify js selector (by @zuk3975)
-    - #30962: Module from theme with tab using SF routing fails after enabling the theme (by @jolelievre)
     - #28070: Add new order - Cart rule description is not correct (by @buggyzap)
     - #30730: Changing wording and adding text helper for product name error input (by @lartist)
     - #30948: Restore original module action order (by @Hlavtox)
     - #28720: Avoid clear ranges when click on "Free shipping" (by @marsaldev)
     - #29944: Use relative urls for Quick Access menu (by @lmeyer1)
-    - #29358: Fix price formatting in MoneyType (by @zuk3975)
     - #29647: BO - Import files - Do not show generated csv files from import/csvfromexcel folder in history of uploaded files (by @mflasquin)
     - #30831: Fix text-preview widget to show combination names in list (by @zuk3975)
     - #30158: Disable access to the customer groups page when this feature is disabled (by @ks129)
